// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders 1`] = `
<span
  className="wrapper"
>
  <label
    className="srOnly"
  >
    test label
  </label>
  <input
    checked={false}
    className="input"
    name="test"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="container"
  >
    <svg
      className="circle"
      viewBox="0 0 16 16"
    >
      <circle
        cx="8"
        cy="8"
        r="8"
      />
    </svg>
  </div>
</span>
`;

exports[`Switch renders a checked variant 1`] = `
<span
  className="wrapper"
>
  <label
    className="srOnly"
  >
    test label
  </label>
  <input
    checked={true}
    className="input"
    name="test"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="container"
  >
    <svg
      className="circle"
      viewBox="0 0 16 16"
    >
      <circle
        cx="8"
        cy="8"
        r="8"
      />
    </svg>
  </div>
</span>
`;

exports[`Switch renders a large variant 1`] = `
<span
  className="wrapper large"
>
  <label
    className="srOnly"
  >
    test label
  </label>
  <input
    checked={false}
    className="input"
    name="test"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="container"
  >
    <svg
      className="circle"
      viewBox="0 0 16 16"
    >
      <circle
        cx="8"
        cy="8"
        r="8"
      />
    </svg>
  </div>
</span>
`;
